# simple-interaction

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/portmonitor/: face_pm.lua  wonder_pm.lua
app/scripts/: SimpleInteraction.xml.template
src/: CMakeLists.txt
src/simpleFaceDetector/: CMakeLists.txt
src/simpleFaceDetector/src/: Detector.cpp  Detector.h  main.cpp
src/touchDetector/: CMakeLists.txt
src/touchDetector/src/: main.cpp  touchDetector.cpp  touchDetector.h
src/wonderAround/: CMakeLists.txt  wonder.cpp  wonder.h
src/wonderAround/src/: wonder.cpp
