# Copyright: (C) 2011 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Ali Paikan
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.8)

add_subdirectory(wonderAround)
add_subdirectory(simpleFaceDetector)
add_subdirectory(touchDetector)

